--- a/app/src/main/res/layout/creation_service.xml
+++ b/app/src/main/res/layout/creation_service.xml
@@ -5,7 +5,7 @@
     style="@style/allPages"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.AddingServiceActivity">
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.CreationServiceActivity">
 
     <LinearLayout
         android:id="@+id/topAddingServiceLayout"
@@ -118,11 +118,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone"></LinearLayout>
+                android:orientation="vertical"/>
 
         </LinearLayout>
-
 
     </ScrollView>
 
