--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -26,17 +26,20 @@
             <EditText
                 android:id="@+id/phoneRegistrationInput"
                 style="@style/loginPackageInput"
-                android:hint="@string/phoneRegistration" />
+                android:hint="@string/phoneRegistration"
+                android:inputType="phone" />
 
             <EditText
                 android:id="@+id/nameRegistrationInput"
                 style="@style/loginPackageInput"
-                android:hint="@string/nameRegistration" />
+                android:hint="@string/nameRegistration"
+                android:inputType="text" />
 
             <EditText
                 android:id="@+id/surnameRegistrationInput"
                 style="@style/loginPackageInput"
-                android:hint="@string/surname" />
+                android:hint="@string/surname"
+                android:inputType="text" />
 
             <LinearLayout
                 android:layout_width="200dp"
@@ -45,14 +48,14 @@
 
                 <Spinner
                     android:id="@+id/citySpinnerRegistrationSpinner"
+                    style="@style/loginPackageSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:backgroundTint="@color/panelColor"
-                    android:entries="@array/choice_cites"
-                    android:popupBackground="@color/panelColor" />
+                    android:entries="@array/choice_cites" />
             </LinearLayout>
+
         </LinearLayout>
+
     </LinearLayout>
 
     <Button
@@ -62,4 +65,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
