--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -123,12 +123,16 @@
     </style>
 
     <style name="defaultTextProfile">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="fontFamily">@font/roboto_black</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">2dp</item>
     </style>
 
     <style name="mainTextProfile">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textSize">20sp</item>
@@ -249,10 +253,8 @@
 
     <style name="smallMainButtonOther" parent="mainButton">
         <item name="android:background">@drawable/main_button</item>
-        <item name="android:width">172dp</item>
+        <item name="android:width">170dp</item>
         <item name="android:height">36dp</item>
     </style>
-
-
 
 </resources>
