--- a/app/src/main/res/layout/creation_service.xml
+++ b/app/src/main/res/layout/creation_service.xml
@@ -17,9 +17,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
+        android:layout_margin="2dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/bottomAddServiceLayout"
+        app:layout_constraintBottom_toTopOf="@+id/addServiceCreationServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topAddingServiceLayout">
@@ -30,7 +30,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/mainLayoutAddService"
+                android:id="@+id/mainCreationServiceLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -38,7 +38,7 @@
                 <LinearLayout style="@style/block">
 
                     <EditText
-                        android:id="@+id/nameAddServiceInput"
+                        android:id="@+id/nameCreationServiceInput"
                         style="@style/mainBlockText"
                         android:hint="@string/nameAddServiceTB" />
                 </LinearLayout>
@@ -46,7 +46,7 @@
                 <LinearLayout style="@style/block">
 
                     <EditText
-                        android:id="@+id/costAddServiceInput"
+                        android:id="@+id/costCreationServiceInput"
                         style="@style/mainBlockText"
                         android:hint="@string/costAddServiceTB"
                         android:inputType="number" />
@@ -55,13 +55,13 @@
                 <LinearLayout style="@style/block">
 
                     <EditText
-                        android:id="@+id/addressAddServiceInput"
+                        android:id="@+id/addressCreationServiceInput"
                         style="@style/mainBlockText"
                         android:hint="Адрес" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/categoryAddServiceLayout"
+                    android:id="@+id/categoryCreationServiceLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
@@ -69,7 +69,7 @@
                 <LinearLayout style="@style/block">
 
                     <EditText
-                        android:id="@+id/descriptionAddServiceInput"
+                        android:id="@+id/descriptionCreationServiceInput"
                         style="@style/mainBlockText"
                         android:hint="Описание"
                         android:inputType="textMultiLine|textCapSentences" />
@@ -82,13 +82,13 @@
                     android:scrollbars="none">
 
                     <LinearLayout
-                        android:id="@+id/photoAddingServiceLayout"
+                        android:id="@+id/photoCreationServiceLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/photoAddingServiceBtn"
+                            android:id="@+id/photoCreationServiceBtn"
                             android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="15dp"
@@ -101,24 +101,15 @@
 
                 </HorizontalScrollView>
 
-                <Button
-                    android:id="@+id/addServiceAddServiceBtn"
-                    style="@style/mainButtonOther"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/addServices" />
-
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/premiumAddServiceLayout"
+                android:id="@+id/premiumCreationServiceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
 
         </LinearLayout>
 
@@ -131,6 +122,16 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/addServiceCreationServiceBtn"
+        style="@style/mainButtonLogIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/addServices"
+        app:layout_constraintBottom_toTopOf="@id/bottomAddServiceLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
